RESOLVED FIXED122750
[BlackBerry] Don't crash after OpenGL robustness reset
https://bugs.webkit.org/show_bug.cgi?id=122750
Summary [BlackBerry] Don't crash after OpenGL robustness reset
Arvid Nilsson
Reported 2013-10-14 05:44:15 PDT
Just log the incident and pretend like nothing happened. JIRA 517132.
Attachments
Patch (1.93 KB, patch)
2013-10-14 05:50 PDT, Arvid Nilsson
no flags
Arvid Nilsson
Comment 1 2013-10-14 05:50:17 PDT
WebKit Commit Bot
Comment 2 2013-10-14 07:02:10 PDT
Comment on attachment 214145 [details] Patch Clearing flags on attachment: 214145 Committed r157398: <http://trac.webkit.org/changeset/157398>
WebKit Commit Bot
Comment 3 2013-10-14 07:02:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.