Don't crash after OpenGL robustness reset https://bugs.webkit.org/show_bug.cgi?id=122750

Patch by Arvid Nilsson <anilsson@blackberry.com> on 2013-10-14
Reviewed by George Staikos.

JIRA 517132.
Just log the incident and pretend like nothing happened.

No new tests, we don't have repeatable steps to reproduce a robustness
reset.

* platform/graphics/blackberry/LayerRenderer.cpp:
(WebCore::LayerRenderer::makeContextCurrent):

Canonical link: https://commits.webkit.org/140867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157398 268f45cc-cd09-0410-ab3c-d52691b4dbfc